--- a/rain_style.css
+++ b/rain_style.css
@@ -78,17 +78,18 @@ canvas {
 }
 
 .typing-effect {
-  padding-left: 200px;
+  width: 550px;
+  height: 100px;
+  word-wrap: break-word;
+  margin-left: 220px;
 }
 
-p {
-  overflow: hidden;
-  white-space: nowrap;
+#typewriter {
   font-family: "Press Start 2P", cursive;
   color: #97fff8;
   font-size: 10px;
   display: inline-block;
-  animation: typing 3s steps(30) infinite;
+  line-height: 1.5;
 }
 
 @keyframes typing {
@@ -110,14 +111,23 @@ p {
 .user_name {
   color: white;
   font-size: 40px;
+  margin-top: 15px;
 }
 .user_name h2 {
   margin: 0;
   margin-right: 10px;
+  line-height: 0;
 }
 .user_name h1 {
-  margin: 10px 0;
+  margin: 0;
+  margin-top: 10px;
+  line-height: 1;
   font-size: 70px;
+}
+
+.rgb_light {
+  height: 5px;
+  width: 800px;
 }
 
 #buttons {
@@ -125,13 +135,13 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0;
+  margin: 0 20px;
   padding: 0;
   list-style: none;
 }
 #buttons li {
   width: 50%;
-  margin: 10px 0;
+  margin: 0;
 }
 #buttons li a i {
   font-size: 50px;
@@ -143,14 +153,21 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5px;
+  margin: 10px 18px;
+  padding: 12px 8px;
   text-decoration: none;
   color: #ffffff;
 }
 .button:hover {
+  border-radius: 5px;
+  border: 2px solid #c5feff;
   color: #fff;
   text-shadow: 1px 1px #97fff8;
-  box-shadow: 0 0 5px #97fff8, 0 0 5px #97fff8 inset;
+  box-shadow: 0 0 5px #97fff8, 0 0 5px #ff97ea inset;
+}
+.button:hover .label {
+  text-shadow: 3px 0 0 rgb(255, 0, 255), -3px 0 0 rgb(0, 255, 255);
+  display: block;
 }
 
 .label {
@@ -158,7 +175,7 @@ p {
   text-align: center;
   font-family: "Audiowide", cursive;
   font-size: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .pane {
@@ -198,8 +215,8 @@ p {
 }
 
 .seperator {
-  width: 3000px;
-  height: 15px;
+  width: 1000px;
+  height: 9px;
   animation: rotate 3s infinite linear;
   -webkit-animation: rotate 3s infinite linear;
 }
@@ -239,5 +256,94 @@ p {
   }
   100% {
     text-shadow: 3px 0 0 rgb(255, 0, 255), -3px 0 0 rgb(0, 255, 255);
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    background-color: black;
+    width: 100%;
+  }
+  .all {
+    overflow: visible;
+  }
+  .black {
+    animation: none;
+    z-index: 1;
+    opacity: 0.5;
+  }
+  .grop {
+    width: 100%;
+    z-index: 2;
+    margin: auto 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  .user_name h2 i {
+    font-size: 45px;
+    margin-left: 40px;
+  }
+  .user_name h1 {
+    font-size: 50px;
+  }
+  .box {
+    width: 100%;
+    height: auto;
+    transform: skew(9deg) translate(-100px, 110px);
+  }
+  #bar {
+    height: 10px;
+  }
+  .typing-effect {
+    margin-left: 100px;
+    width: auto;
+  }
+  #typewriter {
+    font-size: 9px;
+  }
+  .rgb_light {
+    width: 100%;
+  }
+  #buttons {
+    margin: 0;
+    width: auto;
+  }
+}
+@media screen and (max-width: 548px) {
+  .user_name {
+    padding: 20px;
+  }
+  .user_name h2 i {
+    font-size: 35px;
+    margin-left: 40px;
+  }
+  .user_name h1 {
+    font-size: 30px;
+  }
+  #buttons {
+    padding: 10px;
+  }
+  .button {
+    font-size: 25px;
+    margin: 0;
+    padding: auto;
+  }
+  .label {
+    font-size: 30px;
+  }
+  .box {
+    width: 100%;
+    height: auto;
+    transform: skew(9deg) translate(-100px, 120px);
+  }
+  #typewriter {
+    font-size: 5px;
+    line-height: 1.2;
+  }
+  #bar {
+    display: none;
+  }
+  .typing-effect {
+    min-height: 100px;
+    height: auto;
   }
 }/*# sourceMappingURL=rain_style.css.map */
